...
      });
    }
    setShowModalDelete(false);
  };

  return (
    <S.Container testID="gallery_photos">
      <Header
        title={gallery?.title}
        iconRight={
          <S.WrapperActionsButtons>
            {selectedImages.length > 0 ? (
              <S.ButtonDelete onPress={handleOpenModalDelete}>
                <MaterialIcons name="delete" size={22} color="white" />
              </S.ButtonDelete>
            ) : (
              <S.ButtonCamera onPress={handleAddPhoto} testID="add_photo">
                <MaterialIcons
                  name="add-photo-alternate"
                  size={22}
                  color="white"
                />
              </S.ButtonCamera>
...
