...
        <S.LoadingWrapper>
          <ActivityIndicator size="large" color={theme.colors.salmon} />
        </S.LoadingWrapper>
      );
    } else {
      return (
        <S.CameraWrapper testID="camera_screen">
          <RNCamera
            ref={cameraRef}
            device={device}
            isActive={true}
            photo={true}
            torch={activeFlash}
...
            <MaterialIcons
              name="collections"
              size={30}
              color={theme.colors.shape}
            />
          </S.ButtonIcon>
          <S.ButtonCamera onPress={handleTakePicture} testID="take_picture">
            <MaterialIcons name="camera" size={55} color={theme.colors.shape} />
          </S.ButtonCamera>
          <S.ButtonIcon onPress={toogleCameraVision}>
            <MaterialIcons
              name="flip-camera-android"
              size={30}
...
